--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.falconbrick"
+        applicationId "com.falconbrick"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
